# space_business2_riir

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  Readme.md  TODO.md
.github/workflows/: main.yml
assets/: babcia.aseprite  dziadek.aseprite  dziecko.aseprite  dziewczynka.aseprite  jablecznik.aseprite  pomarancz.aseprite  trup.aseprite
data/: config.json
macros/: Cargo.toml
macros/src/: lib.rs
src/: config.rs  debug.rs  input.rs  logic.rs  main.rs  orbiting.rs  rendering.rs  stats.rs
src/debug/: components.rs  plugin.rs  ui.rs
src/input/: actions.rs  map.rs  plugin.rs
src/logic/: ai.rs  components.rs  economy.rs  interactions.rs  invariants.rs  measures.rs  people.rs  planet.rs  plugin.rs
src/rendering/: camera.rs  planet.rs  plugin.rs  tiles.rs  ui.rs
src/stats/: components.rs  economy.rs  plugin.rs  ui.rs
